<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewTitle"
                style="@style/Font.Header.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/use_location_for_best_results"
                android:textAlignment="center"
                android:textColor="@color/textColorBlack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_skip" />

            <TextView
                android:id="@+id/textView"
                style="@style/Font.Header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/also_change_your_location"
                android:textAlignment="center"
                android:textColor="@color/textColorBlack"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/autoLocation"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/auto_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView" />

            <TextView
                android:id="@+id/textView2"
                style="@style/Font.Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/or"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/autoLocation" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="32dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@id/textView2"
                app:layout_constraintEnd_toStartOf="@id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textView2" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="32dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textView2"
                app:layout_constraintTop_toTopOf="@id/textView2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/manualLocation"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/manual_location"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/manualLocationField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="48dp"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/fill_your_location"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp"
                app:boxStrokeColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/manualLocation">

                <AutoCompleteTextView
                    android:id="@+id/simpleMultiAutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/footerText"
                style="@style/Font.Header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/user_experience_configuration"
                android:textAlignment="center"
                android:textColor="@color/textColorSecondaryBlack"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/manualLocationField" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_skip"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:text="@string/skip"
                android:textSize="16sp"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>